--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!--引入百度地图的jssdk，这里需要使用你在百度地图开发者平台申请的 ak-->
+    <!-- 百度地图 SDK 脚本会在全局暴露一个数据: Bmap -->
+    <!-- 注意：在项目代码中访问第三方全局数据，必须加 window 前缀 -->
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=s9NckGVkTu78G1LnmHH1kyEyRWnAZl9q"></script>
   </head>
   <body>
     <noscript>
